[project]
name = "asanaprint"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.2.0",
    "nuitka>=2.8.9",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "plotly>=6.5.0",
    "pyinstaller>=6.17.0",
    "pyside6>=6.10.1",
]
